--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,20 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-            <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymock</artifactId>
-            <version>3.0</version>
-            <scope>test</scope>
-        </dependency>
+    
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <version>3.0</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>io.horizondb</groupId>
+      <artifactId>horizondb-test</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
     
     <dependency>
       <groupId>io.horizondb</groupId>
